# CppAudioEngine

./: CMakeLists.txt  CMakePresets.json  README.md  vcpkg-configuration.json
include/Audio/: AudioBuffer.h  AudioData.h  AudioEngine.h  AudioManager.h  Clip.h  ClipEffects.h  Mixer.h  StreamData.h  Voice.h
include/Audio/Effects/: ClipEffects.h
include/Utility/: IdPool.h
src/: main.cpp
src/Audio/: AudioBuffer.cpp  AudioEngine.cpp  AudioManager.cpp  Clip.cpp  ClipEffects.cpp  Mixer.cpp  Voice.cpp
src/Audio/Effects/: ClipEffects.cpp
src/Utility/: IdPool.cpp
